# toy-raft

./: CMakeLists.txt  README.md
protobufs/: echo.proto  raft.proto
src/: Entry.cpp  Entry.hpp  Node.cpp  Node.hpp  flags.cpp  flags.hpp  main.cpp  rpcClient.cpp  rpcServer.cpp
